
package herencia_figurageometrica;

public abstract class FiguraGeometrica {
    
    private String nombre;
    public abstract double area();
    public abstract double perimetro();
    
}
